<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tianjun.projecttest.MainActivity">

    <RadioGroup
        android:id="@+id/main_bottom_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@+id/main_bottom_selector_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"/>
        <RadioButton
            android:id="@+id/main_bottom_selector_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goods"/>
        <RadioButton
            android:id="@+id/main_bottom_selector_customer_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:background="@drawable/add_share_icon"/>
        <RadioButton
            android:id="@+id/main_bottom_selector_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show"/>
        <RadioButton
            android:id="@+id/main_bottom_selector_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine"/>
    </RadioGroup>
</RelativeLayout>
