<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tianjun.projecttest.SearchActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/search_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTitleBK"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_toLeftOf="@+id/search_search_txt">
                <EditText
                    android:id="@+id/search_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/searchicon"
                    android:background="@drawable/mm_edit_normal"
                    android:hint="@string/search_info_hint"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:drawablePadding="3dp"
                    android:imeOptions="actionSearch"
                    style="@style/Black14Font"/>
            </LinearLayout>
            <TextView
                android:id="@+id/search_search_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme15Font"
                android:text="@string/search_text"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/search_cancle_txt"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/search_cancle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme15Font"
                android:text="@string/cancel_text"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TabLayout
        android:id="@+id/search_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_tool"/>
    <com.example.tianjun.projecttest.CustomerView.DontMoveViewPager
        android:id="@+id/search_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_tab"/>
</RelativeLayout>
