<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.tianjun.projecttest.DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/detail_my_comment">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_img"
                android:layout_margin="10dp"
                style="@style/Black20Font"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_author_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/detail_title"
                android:layout_alignLeft="@id/detail_title"/>

            <TextView
                android:id="@+id/detail_author_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Black16Font2"
                android:layout_alignTop="@id/detail_author_img"
                android:layout_toRightOf="@id/detail_author_img"/>

            <TextView
                android:id="@+id/detail_add_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Gray14Font"
                android:layout_below="@id/detail_author_title"
                android:layout_alignLeft="@id/detail_author_title"/>

            <TextView
                android:id="@+id/detail_had_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/little_eye"
                style="@style/Gray15Font"
                android:drawablePadding="3dp"
                android:layout_toLeftOf="@+id/detail_support"
                android:layout_alignBaseline="@id/detail_add_time"/>

            <TextView
                android:id="@+id/detail_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/little_collect"
                style="@style/Gray15Font"
                android:drawablePadding="3dp"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/detail_shared"
                android:layout_alignBaseline="@id/detail_add_time"/>

            <TextView
                android:id="@+id/detail_shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/little_share"
                style="@style/Gray15Font"
                android:drawablePadding="3dp"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/detail_add_time"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"/>

            <ImageView
                android:id="@+id/detail_split"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color96"
                android:layout_margin="10dp"
                android:layout_below="@id/detail_add_time"/>

            <TextView
                android:id="@+id/detail_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Black16Font2"
                android:layout_below="@id/detail_split"
                android:layout_alignLeft="@id/detail_split"
                android:layout_alignRight="@id/detail_split"/>

            <com.example.tianjun.projecttest.CustomerView.CustomerListView
                android:id="@+id/detail_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_introduce"
                android:layout_alignLeft="@id/detail_split"
                android:layout_alignRight="@id/detail_split"
                android:divider="@null"
                android:layout_marginTop="5dp"/>

            <RelativeLayout
                android:id="@+id/detail_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_details"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <TextView
                    android:id="@+id/detail_comment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Black16Font2"
                    android:text="@string/comment"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/detail_comment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Black16Font2"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/detail_comment_title"
                    android:layout_alignBaseline="@id/detail_comment_title"/>
                <ImageView
                    android:id="@+id/detail_comment_top_split"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color96"
                    android:layout_below="@id/detail_comment_title"/>
                <RelativeLayout
                    android:id="@+id/detail_comment_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_comment_top_split">

                    <com.example.tianjun.projecttest.CustomerView.CustomerListView
                        android:id="@+id/detail_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:id="@+id/detail_empty_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/remark_empty"
                        android:text="@string/empty_comment"
                        style="@style/Gray15Font"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"/>

                </RelativeLayout>

                <ImageView
                    android:id="@+id/detail_comment_list_split"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color96"
                    android:layout_alignLeft="@id/detail_comment_RL"
                    android:layout_below="@id/detail_comment_RL"/>

                <Button
                    android:id="@+id/detail_comments_more"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/radio_white_button"
                    android:text="@string/watch_more"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    style="@style/Theme15Font"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/detail_comment_list_split"/>
            </RelativeLayout>


            <ImageView
                android:id="@+id/detail_comment_Bottom_split"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color96"
                android:layout_alignLeft="@id/detail_comments"
                android:layout_marginRight="10dp"
                android:layout_below="@id/detail_comments"/>
            <TextView
                android:id="@+id/detail_read_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Black16Font2"
                android:text="@string/read_me"
                android:layout_below="@id/detail_comment_Bottom_split"
                android:layout_margin="10dp"/>
            <com.example.tianjun.projecttest.CustomerView.CustomerListView
                android:id="@+id/detail_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:layout_below="@id/detail_read_title"
                android:layout_alignLeft="@id/detail_read_title"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@id/detail_my_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="@color/coloree">
        <ImageView
            android:id="@+id/detail_user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/default_avatar"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:layout_toRightOf="@id/detail_user_img"
            android:layout_toLeftOf="@+id/detail_send_btn"
            android:layout_marginLeft="5dp">
            <EditText
                android:id="@+id/detail_send_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mm_edit_normal"
                android:hint="@string/edit_hint"
                android:gravity="center_vertical"
                android:singleLine="true"
                style="@style/Black14Font"/>
        </LinearLayout>
        <Button
            android:id="@id/detail_send_btn"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/send"
            android:textColor="#FFFFFF"
            android:background="@drawable/radio_button_shape"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
